desktop+tablet version

--- a/pages/webDesign/webDesign.html
+++ b/pages/webDesign/webDesign.html
@@ -190,38 +190,66 @@
             </div>
           </div>
         </section>
-        <section class="explanation-section">
-          <div class="card-expl">
-            <div class ="card-content">
-              <h3>Learn the basic</h3>
-              <p> Entering the web programming world can be difficult for brand-new people. So many concepts sound strange and become problematic at the writing stage. How to write: software developer or front-end developer? Maybe a front-end developer, or rather a front-end software engineer? However, the most common is the hyphen entry. Front-end developer—the person responsible for the visual part of the application (what we see, we = users of the site).<br>
-                  Usually, the front-end developer works with a graphic designer (web designer) who provides the graphic design. Often, front-end developers have the opportunity to work with a UX designer who proposes and creates a prototype of interactions that will take place on the websites. The role of front-end developers is to put it all together. It is popularly said that a front-end developer is tasked with cutting a graphic design—dividing the design into smaller parts and coding (HTML and CSS) into websites that users.
-              </p>
-            </div>
-          </div>
-          <div class="card-expl numb-2">
-            <div class ="card-content">
-              <h3>Learn to be advanced</h3>
-              <p> Entering the web programming world can be difficult for brand-new people. So many concepts sound strange and become problematic at the writing stage. How to write: software developer or front-end developer? Maybe a front-end developer, or rather a front-end software engineer? However, the most common is the hyphen entry. Front-end developer—the person responsible for the visual part of the application (what we see, we = users of the site).<br>
-                  Usually, the front-end developer works with a graphic designer (web designer) who provides the graphic design. Often, front-end developers have the opportunity to work with a UX designer who proposes and creates a prototype of interactions that will take place on the websites. The role of front-end developers is to put it all together. It is popularly said that a front-end developer is tasked with cutting a graphic design—dividing the design into smaller parts and coding (HTML and CSS) into websites that users.
-              </p>
-            </div>
-          </div>
-          <div class="card-expl numb-2">
-            <div class ="card-content">
-              <h3>Become an expert</h3>
-              <p> Entering the web programming world can be difficult for brand-new people. So many concepts sound strange and become problematic at the writing stage. How to write: software developer or front-end developer? Maybe a front-end developer, or rather a front-end software engineer? However, the most common is the hyphen entry. Front-end developer—the person responsible for the visual part of the application (what we see, we = users of the site).<br>
-                  Usually, the front-end developer works with a graphic designer (web designer) who provides the graphic design. Often, front-end developers have the opportunity to work with a UX designer who proposes and creates a prototype of interactions that will take place on the websites. The role of front-end developers is to put it all together. It is popularly said that a front-end developer is tasked with cutting a graphic design—dividing the design into smaller parts and coding (HTML and CSS) into websites that users.
-              </p>
-            </div>
-          </div>   
       </section>
-      <section>
-        <div class="down-line"></div>
-        <p id="motivate-text">
-          Decide today to be stronger tomorrow and nothing will be able to stop you. 
-        </p>
+      <div class="down-line"></div>
+      <p id="motivate-text">
+        Decide today to be stronger tomorrow and nothing will be able to stop you. 
+      </p>
+      <section class="uni-section">
+        <div class="card-uni">
+          <img 
+            src = "./images/basics-image.png" 
+            alt = "image for basics course"
+          >
+          <div class ="card-content-uni">
+            <h3> Learn the basic</h3>
+            <p> 3 month course </p>
+            <a href="../contactPage/contactPage.html">
+              Start now 
+            </a>
+          </div>
+        </div>
+        <div class="card-uni">
+          <img 
+            src = "./images/basics-image.png" 
+            alt = "image for basics course"
+          >
+          <div class ="card-content-uni">
+            <h3> Learn the basic</h3>
+            <p> 3 month course </p>
+            <a href="../contactPage/contactPage.html">
+              Start now 
+            </a>
+          </div>
+        </div>
+        <div class="card-uni">
+          <img 
+            src = "./images/basics-image.png" 
+            alt = "image for basics course"
+          >
+          <div class ="card-content-uni">
+            <h3> Learn the basic</h3>
+            <p> 3 month course </p>
+            <a href="../contactPage/contactPage.html">
+              Start now 
+            </a>
+          </div>
+        </div>
+        <div class="card-uni">
+          <img 
+            src = "./images/basics-image.png" 
+            alt = "image for basics course"
+          >
+          <div class ="card-content-uni">
+            <h3> Learn the basic</h3>
+            <p> 3 month course </p>
+            <a href="../contactPage/contactPage.html">
+              Start now 
+            </a>
+          </div>
+        </div>
       </section>
+      
     </main>
     <footer>Copyright ©</footer>
   </body>
