--- a/pages/frontend/frontend.html
+++ b/pages/frontend/frontend.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Frontend</title>
     <link
       href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,700;0,900;1,300&display=swap"
@@ -18,7 +18,7 @@
             class="logo-image"
             src="./images/Code Elite.png"
             alt="logo of code elite academy"
-          >
+          />
         </a>
       </picture>
       <nav id="navigation">
@@ -29,79 +29,94 @@
         <a href="../contactPage/contactPage.html">Contact us</a>
       </nav>
     </header>
-    <section id="about-frontend">
-      <div>
-        <h1 class="main-heading">Frontend Web Developement</h1>
-        <p class="frontend-defination">
-          Front-end web development is the development<br>
-          of the graphical user interface of a website,<br>
-          through the use of <span>HTML, CSS,</span> and
-          <span>JavaScript</span>,<br />
-          so that users can view and interact with that website.
-        </p>
-        <a href="../contactPage/contactPage.html"><button>Apply Now</button></a>
-      </div>
+    <main>
+      <section id="about-frontend">
+        <figure>
+          <img
+            class="tech-image"
+            src="./images/tech_team_safety_culture.jpeg"
+            alt="tech related background image"
+          />
+        </figure>
+        <div class="frontend-description">
+          <h1 class="main-heading">Frontend Web Developement</h1>
+          <p class="frontend-defination">
+            Front-end web development is the development<br />
+            of the graphical user interface of a website,<br />
+            through the use of <span>HTML, CSS,</span> and
+            <span>JavaScript</span>,<br />
+            so that users can view and interact with that website.
+          </p>
+          <!-- <a href="../contactPage/contactPage.html"
+            ><button>Apply Now</button></a
+          > -->
+        </div>
+      </section>
+      <div class="language-heading"><h2>Technologies used in Frontend</h2></div>
+      <section id="detail-section">
+        <section class="language-detail">
+          <i class="fab fa-html5 language-header"></i>
+          <h2 class="language-title">HTML</h2>
+          <p class="language-description">
+            The HyperText Markup Language or HTML is the standard markup
+            language for documents designed to be displayed in a web browser. It
+            defines the meaning and structure of web content.
+          </p>
+        </section>
+        <section class="language-detail">
+          <i class="fab fa-css3-alt language-header"></i>
+          <h2 class="language-title">CSS</h2>
+          <p class="language-description">
+            Cascading Style Sheets is a style sheet language used for describing
+            the presentation of a document written in a markup language such as
+            HTML or XML. CSS is a cornerstone technology of the World Wide Web
+          </p>
+        </section>
+        <section class="language-detail">
+          <i class="fab fa-js-square language-header"></i>
+          <h2 class="language-title">JavaScript</h2>
+          <p class="language-description">
+            JavaScript, often abbreviated as JS, is a programming language that
+            is one of the core technologies of the World Wide Web, alongside
+            HTML and CSS. As of 2023, 98.7% of websites use JavaScript on the
+            client side for webpage behavior, often incorporating third-party
+            libraries.
+          </p>
+        </section>
+      </section>
+      <section class="call-to-action">
+        <div class="card">
+          <figure>
+            <img
+              class="thinking-image"
+              src="./images/thinking.png"
+              alt="think man image"
+            />
+          </figure>
+          <div class="action-content">
+            <h3>Take Action</h3>
+            <p>Take Step to your bright future.</p>
+            <a href="../contactPage/contactPage.html"
+              ><button>Apply Now</button></a
+            >
+          </div>
+        </div>
+      </section>
 
-      <picture>
-        <img
-          class="frontend-image"
-          src="./images/main-image.png"
-          alt="coding website sample image"
-        >
-      </picture>
-    </section>
-    <div class="language-heading"><h2>Technologies used in Frontend</h2></div>
-    <section id="detail-section">
-      <section class="language-detail">
-        <img
-          class="language-image"
-          src="./images/html.png"
-          alt="html icon image"
-        >
-        <h2 class="language-title">HTML</h2>
-        <p class="language-description">
-          The HyperText Markup Language or HTML is the standard markup language
-          for documents designed to be displayed in a web browser. It defines
-          the meaning and structure of web content.
+      <section class="testimonials">
+        <p class="testimonial-text">
+          "Not only do you leave with a new skill set under your belt,<br />
+          you meet a significant amount of super talented people.<br />
+          This course in Frontend web developement is the best<br />
+          choice I have ever made."
         </p>
+        <p class="testimonial-alumni">-Faheem Hassan</p>
       </section>
-      <section class="language-detail">
-        <img
-          class="language-image"
-          src="./images/css.png"
-          alt="css icon image"
-        >
-        <h2 class="language-title">CSS</h2>
-        <p class="language-description">
-          Cascading Style Sheets is a style sheet language used for describing
-          the presentation of a document written in a markup language such as
-          HTML or XML. CSS is a cornerstone technology of the World Wide Web
-        </p>
-      </section>
-      <section class="language-detail">
-        <img
-          class="language-image"
-          src="./images/js-logo.png"
-          alt="javascript icon image"
-        >
-        <h2 class="language-title">JavaScript</h2>
-        <p class="language-description">
-          JavaScript, often abbreviated as JS, is a programming language that is
-          one of the core technologies of the World Wide Web, alongside HTML and
-          CSS. As of 2023, 98.7% of websites use JavaScript on the client side
-          for webpage behavior, often incorporating third-party libraries.
-        </p>
-      </section>
-    </section>
-    <section class="testimonials">
-      <p class="testimonial-text">
-        "Not only do you leave with a new skill set under your belt,<br />
-        you meet a significant amount of super talented people.<br />
-        This course in Frontend web developement is the best<br />
-        choice I have ever made."
-      </p>
-      <p class="testimonial-alumni">-Faheem Hassan</p>
-    </section>
+    </main>
     <footer>Copyright ©</footer>
+    <script
+      src="https://kit.fontawesome.com/0e4aa26396.js"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
