mobile tablet desktop version

--- a/pages/webDesign/webDesign.html
+++ b/pages/webDesign/webDesign.html
@@ -191,65 +191,73 @@
           </div>
         </section>
       </section>
-      <div class="down-line"></div>
+      <section class="down-line"></section>
       <p id="motivate-text">
         Decide today to be stronger tomorrow and nothing will be able to stop you. 
       </p>
+      <h4 id="top-companies">Top companies for web designers</h4>
       <section class="uni-section">
         <div class="card-uni">
           <img 
-            src = "./images/basics-image.png" 
-            alt = "image for basics course"
+            src = "./images/company-1-image.png" 
+            alt = "image for company"
           >
           <div class ="card-content-uni">
-            <h3> Learn the basic</h3>
-            <p> 3 month course </p>
-            <a href="../contactPage/contactPage.html">
-              Start now 
+            <h3>eFlair</h3>
+            <a href="https://eflairwebtech.com/" target="_blank">
+              See more
             </a>
           </div>
         </div>
         <div class="card-uni">
           <img 
-            src = "./images/basics-image.png" 
-            alt = "image for basics course"
+            src = "./images/company-2-image.jpg" 
+            alt = "image for company"
           >
           <div class ="card-content-uni">
-            <h3> Learn the basic</h3>
-            <p> 3 month course </p>
-            <a href="../contactPage/contactPage.html">
-              Start now 
+            <h3>Baunfire</h3>
+            <a href="https://www.baunfire.com/" target="_blank">
+              See more
             </a>
           </div>
         </div>
         <div class="card-uni">
           <img 
-            src = "./images/basics-image.png" 
-            alt = "image for basics course"
+            src = "./images/copany-3-image.png" 
+            alt = "image for company"
           >
           <div class ="card-content-uni">
-            <h3> Learn the basic</h3>
-            <p> 3 month course </p>
-            <a href="../contactPage/contactPage.html">
-              Start now 
+            <h3>Neonrain</h3>
+            <a href="https://www.neonrain.com/" target="_blank">
+              See more
             </a>
           </div>
         </div>
         <div class="card-uni">
           <img 
-            src = "./images/basics-image.png" 
-            alt = "image for basics course"
+            src = "./images/company-4-image.png" 
+            alt = "image for company"
           >
           <div class ="card-content-uni">
-            <h3> Learn the basic</h3>
-            <p> 3 month course </p>
-            <a href="../contactPage/contactPage.html">
-              Start now 
+            <h3>Savas Labs</h3>
+            <a href="https://savaslabs.com/" target="_blank">
+              See more
+            </a>
+          </div>
+        </div>
+        <div class="card-uni">
+          <img 
+            src = "./images/company-5-image.jpg" 
+            alt = "image for company"
+          >
+          <div class ="card-content-uni">
+            <h3>Azuro Digital</h3>
+            <a href="https://www.azurodigital.com/" target="_blank">
+              See more
             </a>
           </div>
         </div>
       </section>
-      
     </main>
     <footer>Copyright ©</footer>
   </body>
