--- a/index.html
+++ b/index.html
@@ -23,41 +23,41 @@
           >
         </a>
       </picture>
-      <nav id="navigation">
-        <a href="./index.html">Homepage</a>
-        <a href="./pages/frontend/frontend.html">Frontend</a>
-        <a href="./pages/backend/backend.html">Backend</a>
-        <a href="./pages/webDesign/webDesign.html">Webdesign</a>
-        <a href="./pages/contactPage/contactPage.html">Contact us</a>
-      </nav>
-    </header>
-    <section id="intro-section">
-      <div>
-        <h1 class="hero-main-text">Start your career in tech</h1>
-        <p class="intro-text">
-          Turn ambition into job-ready skills<br />
-          and become a Frontend developer, Backend developer<br />
-          or UX/UI web Designer from scratch.
-        </p>
-        <a href="./pages/contactPage/contactPage.html">
-          <button>
-            Apply now
-          </button>
-        </a>
-      </div>
-      <picture>
-        <img
-          class="intro-image"
-          src="./images/intro_image.jpeg"
-          alt="wallpaper of coding academy"
-        >
-      </picture>
-    </section>
-    <section id="information-section">
-      <h2 class="information-header">Choose your passion!</h2>
-      <table>
-        <tr>
-          <td>
+      <main>
+        <nav id="navigation">
+          <a href="./index.html">Homepage</a>
+          <a href="./pages/frontend/frontend.html">Frontend</a>
+          <a href="./pages/backend/backend.html">Backend</a>
+          <a href="./pages/webDesign/webDesign.html">Webdesign</a>
+          <a href="./pages/contactPage/contactPage.html">Contact us</a>
+        </nav>
+      </header>
+      <section id="intro-section">
+        <div>
+          <h1 class="hero-main-text">Start your career in tech</h1>
+          <p class="intro-text">
+            Turn ambition into job-ready skills<br />
+            and become a Frontend developer, Backend developer<br />
+            or UX/UI web Designer from scratch.
+          </p>
+          <a href="./pages/contactPage/contactPage.html">
+            <button>
+              Apply now
+            </button>
+          </a>
+        </div>
+        <picture>
+          <img
+            class="intro-image"
+            src="./images/intro_image.jpeg"
+            alt="wallpaper of coding academy"
+          >
+        </picture>
+      </section>
+      <section id="information-section">
+        <h2 class="information-header">Choose your passion!</h2>
+        <section id="cards-section">
+          <figure>
             <picture>
               <a href="./pages/frontend/frontend.html">
                 <img
@@ -66,10 +66,10 @@
                   alt="image of frontend"
                 >
               </a>
-              <p>click for more information about Frontend Development</p>
             </picture>
-          </td>
-          <td>
+            <p>click for more information about Frontend Development</p>
+          </figure>
+          <figure>
             <picture>
               <a href="./pages/backend/backend.html">
                 <img
@@ -78,10 +78,10 @@
                   alt="image of backend"
                 >
               </a>
-              <p>click for more information about Backend Development</p>
             </picture>
-          </td>
-          <td>
+            <p>click for more information about Backend Development</p>
+          </figure>
+          <figure>
             <picture>
               <a href="./pages/webDesign/webDesign.html">
                 <img
@@ -90,10 +90,10 @@
                   alt="image of web design"
                 >
               </a>
-              <p>click for more infromation about UX/UI Design</p>
             </picture>
-          </td>
-          <td>
+            <p>click for more information about UX/UI Design</p>
+          </figure>
+          <figure>
             <picture>
               <a href="./pages/contactPage/contactPage.html">
                 <img
@@ -102,35 +102,35 @@
                   alt="image not sure"
                 >
               </a>
-              <p>Still not sure what to choose? Click to schedule a short call</p>
             </picture>
-          </td>
-        </tr>
-      </table>
-    </section>
-    <section id="quote-section">
-      <p>
-        <q>
-          A good programmer is someone who always looks both ways before crossing a one-way street. 
-          </q><br>
-          <p id="quote-author">
-            - Doug Linder
-          </p>
-      </p>
-    </section>
-    <section id="call-to-action-section">
-      <div>
-        <h3 class="call-to-action-main-text">Call to action! It's time!</h1>
-        <p class="call-to-action-text">
-          Keep in touch with us to be notified about the best new offers!
+            <p>Still not sure what to choose? Click to schedule a short call</p>
+          </figure>
+        </section>
+      </section>
+      <section id="quote-section">
+        <p>
+          <q>
+            A good programmer is someone who always looks both ways before crossing a one-way street. 
+            </q><br>
+            <p id="quote-author">
+              - Doug Linder
+            </p>
         </p>
-      </div>
-      <a href="./pages/contactPage/contactPage.html">
-        <button>
-          Keep in touch
-        </button>
-      </a>
-    </section>
+      </section>
+      <section id="call-to-action-section">
+        <div>
+          <h3 class="call-to-action-main-text">Call to action! It's time!</h1>
+          <p class="call-to-action-text">
+            Keep in touch with us to be notified about the best new offers!
+          </p>
+        </div>
+        <a href="./pages/contactPage/contactPage.html">
+          <button>
+            Keep in touch
+          </button>
+        </a>
+      </section>
+    </main>
     <footer>
       Copyright ©
     </footer>
