changes in responsiveness

--- a/pages/frontend/frontend.html
+++ b/pages/frontend/frontend.html
@@ -60,7 +60,8 @@
           <p class="language-description">
             The HyperText Markup Language or HTML is the standard markup
             language for documents designed to be displayed in a web browser. It
-            defines the meaning and structure of web content.
+            defines the meaning and structure of web content using semantic
+            elements and tags.
           </p>
         </section>
         <section class="language-detail">
@@ -69,7 +70,7 @@
           <p class="language-description">
             Cascading Style Sheets is a style sheet language used for describing
             the presentation of a document written in a markup language such as
-            HTML or XML. CSS is a cornerstone technology of the World Wide Web
+            HTML or XML. CSS is a cornerstone technology of the World Wide Web.
           </p>
         </section>
         <section class="language-detail">
@@ -78,9 +79,8 @@
           <p class="language-description">
             JavaScript, often abbreviated as JS, is a programming language that
             is one of the core technologies of the World Wide Web, alongside
-            HTML and CSS. As of 2023, 98.7% of websites use JavaScript on the
-            client side for webpage behavior, often incorporating third-party
-            libraries.
+            HTML and CSS. JavaScript deals with client side for webpage
+            behavior.
           </p>
         </section>
       </section>
