--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Home Page</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -23,116 +23,106 @@
           >
         </a>
       </picture>
-      <main>
-        <nav id="navigation">
-          <a href="./index.html">Homepage</a>
-          <a href="./pages/frontend/frontend.html">Frontend</a>
-          <a href="./pages/backend/backend.html">Backend</a>
-          <a href="./pages/webDesign/webDesign.html">Webdesign</a>
-          <a href="./pages/contactPage/contactPage.html">Contact us</a>
-        </nav>
-      </header>
-      <section id="intro-section">
-        <div>
-          <h1 class="hero-main-text">Start your career in tech</h1>
-          <p class="intro-text">
-            Turn ambition into job-ready skills<br />
-            and become a Frontend developer, Backend developer<br />
-            or UX/UI web Designer from scratch.
-          </p>
-          <a href="./pages/contactPage/contactPage.html">
-            <button>
-              Apply now
-            </button>
-          </a>
-        </div>
-        <picture>
-          <img
-            class="intro-image"
-            src="./images/intro_image.jpeg"
-            alt="wallpaper of coding academy"
-          >
-        </picture>
-      </section>
-      <section id="information-section">
-        <h2 class="information-header">Choose your passion!</h2>
-        <section id="cards-section">
-          <figure>
-            <picture>
-              <a href="./pages/frontend/frontend.html">
-                <img
-                  class="information-image"
-                  src="./images/front_end.jpg"
-                  alt="image of frontend"
-                >
-              </a>
-            </picture>
-            <p>click for more information about Frontend Development</p>
-          </figure>
-          <figure>
-            <picture>
-              <a href="./pages/backend/backend.html">
-                <img
-                  class="information-image"
-                  src="./images/back_end.jpg"
-                  alt="image of backend"
-                >
-              </a>
-            </picture>
-            <p>click for more information about Backend Development</p>
-          </figure>
-          <figure>
-            <picture>
-              <a href="./pages/webDesign/webDesign.html">
-                <img
-                  class="information-image"
-                  src="./images/web_design.jpg"
-                  alt="image of web design"
-                >
-              </a>
-            </picture>
-            <p>click for more information about UX/UI Design</p>
-          </figure>
-          <figure>
-            <picture>
-              <a href="./pages/contactPage/contactPage.html">
-                <img
-                  class="information-image"
-                  src="./images/not_sure.jpg"
-                  alt="image not sure"
-                >
-              </a>
-            </picture>
-            <p>Still not sure what to choose? Click to schedule a short call</p>
-          </figure>
-        </section>
-      </section>
-      <section id="quote-section">
-        <p>
-          <q>
-            A good programmer is someone who always looks both ways before crossing a one-way street. 
-            </q><br>
-            <p id="quote-author">
-              - Doug Linder
-            </p>
+      <nav id="navigation">
+        <a href="./index.html">Homepage</a>
+        <a href="./pages/frontend/frontend.html">Frontend</a>
+        <a href="./pages/backend/backend.html">Backend</a>
+        <a href="./pages/webDesign/webDesign.html">Webdesign</a>
+        <a href="./pages/contactPage/contactPage.html">Contact us</a>
+      </nav>
+    </header>
+    <section id="intro-section">
+      <div>
+        <h1 class="hero-main-text">Start your career in tech</h1>
+        <p class="intro-text">
+          Turn ambition into job-ready skills<br />
+          and become a Frontend developer, Backend developer<br />
+          or UX/UI web Designer from scratch.
         </p>
-      </section>
-      <section id="call-to-action-section">
-        <div>
-          <h3 class="call-to-action-main-text">Call to action! It's time!</h1>
-          <p class="call-to-action-text">
-            Keep in touch with us to be notified about the best new offers!
-          </p>
-        </div>
         <a href="./pages/contactPage/contactPage.html">
-          <button>
-            Keep in touch
-          </button>
+          <button>Apply now</button>
         </a>
+      </div>
+      <picture>
+        <img
+          class="intro-image"
+          src="./images/intro_image.jpeg"
+          alt="wallpaper of coding academy"
+        >
+      </picture>
+    </section>
+    <section id="information-section">
+      <h2 class="information-header">Choose your passion!</h2>
+      <section id="cards-section">
+        <figure>
+          <picture>
+            <a href="./pages/frontend/frontend.html">
+              <img
+                class="information-image"
+                src="./images/front_end.jpg"
+                alt="image of frontend"
+              >
+            </a>
+          </picture>
+          <p>click for more information about Frontend Development</p>
+        </figure>
+        <figure>
+          <picture>
+            <a href="./pages/backend/backend.html">
+              <img
+                class="information-image"
+                src="./images/back_end.jpg"
+                alt="image of backend"
+              >
+            </a>
+          </picture>
+          <p>click for more information about Backend Development</p>
+        </figure>
+        <figure>
+          <picture>
+            <a href="./pages/webDesign/webDesign.html">
+              <img
+                class="information-image"
+                src="./images/web_design.jpg"
+                alt="image of web design"
+              >
+            </a>
+          </picture>
+          <p>click for more information about UX/UI Design</p>
+        </figure>
+        <figure>
+          <picture>
+            <a href="./pages/contactPage/contactPage.html">
+              <img
+                class="information-image"
+                src="./images/not_sure.jpg"
+                alt="image not sure"
+              />
+            </a>
+          </picture>
+          <p>Still not sure what to choose? Click to schedule a short call</p>
+        </figure>
       </section>
-    </main>
-    <footer>
-      Copyright ©
-    </footer>
+    </section>
+    <section id="quote-section">
+      <q>
+        A good programmer is someone who always looks both ways before crossing
+        a one-way street. </q
+      ><br />
+      <p id="quote-author">- Doug Linder</p>
+    </section>
+    <section id="call-to-action-section">
+      <div>
+        <h3 class="call-to-action-main-text">Call to action! It's time!</h3>
+        <p class="call-to-action-text">
+          Keep in touch with us to be notified about the best new offers!
+        </p>
+      </div>
+      <a href="./pages/contactPage/contactPage.html">
+        <button>Keep in touch</button>
+      </a>
+    </section>
+
+    <footer>Copyright ©</footer>
   </body>
 </html>
