--- a/index.html
+++ b/index.html
@@ -107,8 +107,8 @@
     <section id="quote-section">
       <q>
         A good programmer is someone who always looks both ways before crossing
-        a one-way street. </q
-      ><br />
+        a one-way street. 
+      </q><br>
       <p id="quote-author">- Doug Linder</p>
     </section>
     <section id="call-to-action-section">
@@ -122,7 +122,6 @@
         <button>Keep in touch</button>
       </a>
     </section>
-
     <footer>Copyright ©</footer>
   </body>
 </html>
